# PixelVote6D

./: .gitignore  README.md  dataloader.py  dataset.py  main.py  mask_finder.py  model.py  pipeline.py  pose_annotator.py  pyproject.toml  ransac.py  readme.md  realtime.py  requirements.txt  self_label.py  smoothing.py  test.py  train.py  vector_field.py  vfield_generator.py
bop_toolkit/: bop_dataset.py  data_transfrom.py  dataloader.py  mask_finder.py  self_label_dataset.py  visualization.py  vizualization.py
configs/: infer.yaml  train.yaml
docs/: architecture.md  data.md  ransac.md  training.md
scripts/: infer.py  infer_folder.py  realtime_demo.py  train.py  vfield_generator.py
scripts/data/: keypoints_picker.py  pseudo_labeling.py
src/pixelvote6d/: __init__.py
src/pixelvote6d/models/: __init__.py  pvnet.py
src/pixelvote6d/pose/: __init__.py  ransac.py
src/pixelvote6d/training/: __init__.py  builder.py  logging.py  utils.py
tests/: test_ransac.py
utils/: algebra.py  cleanup_dataset.py  keypoints_picker.py  vector_field.py
