[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelvote6d"
version = "0.1.0"
description = "Research implementation of PVNet for 6D object pose estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "open3d",
    "orjson",
    "Pillow",
    "scipy",
    "torch",
    "torchvision",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]